# spotify2liked

./: README.md
Screenshot/: COMMANDS.md  CONTRIBUTING.md  LICENSE  Screenshot.py
Screenshot/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Screenshot/.github/workflows/: python-check.yml
office2img/: .gitignore  CHANGELOG.md  README.md  office2img.py  pyproject.toml  requirements.txt
spotify2liked/: .gitignore  spotify2liked.py
