[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "office2img"
version = "1.0.0"
description = "Конвертер документов Office (PDF, DOCX, PPTX) в изображения через Microsoft Office для Windows"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "kapibas"}
]
keywords = ["office", "converter", "pdf", "docx", "pptx", "images", "screenshot", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Office/Business",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

dependencies = [
    "PyMuPDF>=1.23.0",
    "pywin32>=306",
]

[project.urls]
Homepage = "https://github.com/kapibas/office2img"
Documentation = "https://github.com/kapibas/office2img#readme"
Repository = "https://github.com/kapibas/office2img"
Issues = "https://github.com/kapibas/office2img/issues"

[project.scripts]
office2img = "Screenshot:main"
